# Elderly-Care-Robot

./: .gitignore  README.md  start_project.sh
llm/: .gitignore  README.md  agent.py  agent_local.py  api_ui_test.py  cloud_eval.txt  cloud_eval_results_165752.csv  cloud_eval_results_170816_no_sysmsg.csv  cloud_eveal_no_sysmsg.txt  demo_gemini_graph.ipynb  demo_gemini_graph_colab.ipynb  evaluate.py  evaluate_local.py  final_LLM_component.ipynb  functions.py  image_api.py  image_state.json  langgraph.json  local_eval.txt  local_eval_results_170221.csv  parse_fam.py  pyproject.toml  rag.py  requirements.txt  show_img.py  test.ipynb  test_cases.json  tools.py
llm/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
llm/langgraph-test/: agentClient.js  chat_test.js  comprehensive_agent_test.js  package-lock.json  package.json
llm/old/: demo_gemini_graph.ipynb
llm/src/: Images Data - Entourage.csv  Images Data - Facts.csv  Images Data - mem_to_parse.csv  daily logs - raw.csv  parse_facts.py  parse_imageData.py  parse_logcsv.py
llm/src/data/: facts.txt
llm/src/data/logs/: 2025-10-27.txt  2025-10-30.txt  2025-11-03.txt  2025-11-06.txt  2025-11-24.txt  2025-11-25.txt  2025-11-26.txt  2025-11-27.txt  2025-11-28.txt  2025-11-29.txt  2025-11-30.txt  2025-12-01.txt  2025-12-02.txt  2025-12-03.txt  2025-12-04.txt  2025-12-05.txt  2025-12-06.txt  2025-12-07.txt
llm/src/data/parsedMemories/: picture1.txt  picture10.txt  picture11.txt  picture12.txt  picture13.txt  (+16 more)
(+57 files in other folders)
