[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.7.1",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.121.1",
    "langchain>=1.0.2",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.1",
    "langgraph-cli[inmem]>=0.4.7",
    "streamlit>=1.51.0",
]
